Fix headings alignments after changing line-height

--- a/src/components/collapse/Collapse.scss
+++ b/src/components/collapse/Collapse.scss
@@ -16,6 +16,12 @@
   width: 100%;
 }
 
+.collapse-title {
+  color: var(--color-coat-of-arms-blue);
+  font-size: var(--fontsize-heading-m);
+  margin-bottom: var(--spacing-s);
+}
+
 .collapse-button-icon {
   color: var(--hauki-content-text-color);
 }
