--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -17,10 +17,6 @@
   width: 100%;
 }
 
-.main-container h2 {
-  color: var(--color-coat-of-arms-blue);
-}
-
 .section {
   & + & {
     margin-top: $spacing-5-xl;
